--- a/index.html
+++ b/index.html
@@ -3,28 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AzureMC</title>
+  <title>AzureMC - The Best Minecraft Server</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1>AzureMC</h1>
-    <nav>
-      <a href="https://discord.gg/cVYyvkDRPt" target="_blank">Join Discord</a>
-    </nav>
+    <h1 class="animated-title">Welcome to our AzureMC site!</h1>
   </header>
 
-  <main>
-    <section class="server-status">
-      <h2>Minecraft Server Status</h2>
-      <p id="mc-status">Loading...</p>
-      <p id="mc-players">Players Online: --</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 AzureMC</p>
-  </footer>
+  <section class="server-info">
+    <div class="banner">
+      <img src="banner1.png" alt="Banner 1">
+      <img src="banner2.png" alt="Banner 2">
+    </div>
+    <p id="server-ip">Server IP: AzureSMPz.aternos.me:21847</p>
+    <p id="players">Players online: Loading...</p>
+    <a href="https://discord.gg/cVYyvkDRPt" target="_blank" class="discord-button">Join our Discord</a>
+  </section>
 
   <script src="script.js"></script>
 </body>
