--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AzureMC - The Best Minecraft Server</title>
+  <title>AzureMC - Minecraft Server</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <h1 class="animated-title">Welcome to our AzureMC site!</h1>
+    <h1>Welcome to our AzureMC site!</h1>
+    <p id="header-ip">Server IP: AzureSMPz.aternos.me:21847</p>
   </header>
 
   <section class="server-info">
-    <div class="banner">
-      <img src="banner1.png" alt="Banner 1">
-      <img src="banner2.png" alt="Banner 2">
+    <div class="banner-slider">
+      <img src="banner1.png" alt="Banner 1" class="banner-slide active">
+      <img src="banner2.png" alt="Banner 2" class="banner-slide">
+      <img src="banner3.png" alt="Banner 3" class="banner-slide">
     </div>
     <p id="server-ip">Server IP: AzureSMPz.aternos.me:21847</p>
     <p id="players">Players online: Loading...</p>
